Bug 447314 - Undoing liquify stroke also undoes liquify configuration
Summary: Undoing liquify stroke also undoes liquify configuration
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-21 04:47 UTC by tomtomtomreportingin
Modified: 2021-12-21 13:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-12-21 04:47:03 UTC
5.0 git 50f8936

SUMMARY
Undoing liquify strokes also undoes changes to the liquify settings. This makes experimenting with different settings extremely annoying. This does not appear to be a regression.

STEPS TO REPRODUCE
1. Open an image.
2. Select Liquify mode in the transform tool.
3. Change a liquify setting.
4. Stroke with liquify.
5. Undo.

OBSERVED RESULT
Both the stroke and settings change are undone.

EXPECTED RESULT
Only the stroke should be undone.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.88.0
Qt Version: 5.12.11 (appimage)
Comment 1 Dmitry Kazakov 2021-12-21 10:00:06 UTC
Git commit 6c90c301541ad36321fb6176061d8b10bb1b9a0a by Dmitry Kazakov.
Committed on 21/12/2021 at 09:59.
Pushed by dkazakov into branch 'master'.

Fix undo of liquify properties

Undo state should be added when the user ends editing any liquify
property (press Enter or switches focus).

M  +9    -0    plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp

https://invent.kde.org/graphics/krita/commit/6c90c301541ad36321fb6176061d8b10bb1b9a0a
Comment 2 Dmitry Kazakov 2021-12-21 13:50:21 UTC
Git commit d740628f7436c320f8f3f8ae13f284d2c3fcc531 by Dmitry Kazakov.
Committed on 21/12/2021 at 10:00.
Pushed by dkazakov into branch 'krita/5.0'.

Fix undo of liquify properties

Undo state should be added when the user ends editing any liquify
property (press Enter or switches focus).
(cherry picked from commit 6c90c301541ad36321fb6176061d8b10bb1b9a0a)

M  +9    -0    plugins/tools/tool_transform2/kis_tool_transform_config_widget.cpp

https://invent.kde.org/graphics/krita/commit/d740628f7436c320f8f3f8ae13f284d2c3fcc531