Fix undo of liquify properties

Undo state should be added when the user ends editing any liquify
property (press Enter or switches focus).

BUG:447314
(cherry picked from commit 6c90c301541ad36321fb6176061d8b10bb1b9a0a)